Modules/src/aws_vpc/aws_vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block = "${var.vpc_cidr_block}"
  enable_dns_hostnames = true
}
